hero and mission section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <title>Developer Portfolio</title>
 </head>
+<section class="hero">
+
+    <div class="hero-txt half-width">
+        <h1>Welcome to</h1>
+        <h1> <span class="orange-color">Tuhin Shuvra </span> World!</h1>
+        <h1>Full Stack Web Developer</h1>
+        <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These website
+            is hand coded, beautiful, professional, fast to load and responsive in display on any size of
+            device(Desktop, laptop, tab, mobile).</p>
+        <a class="btn-link" href="#">HIRE ME</a>
+    </div>
+
+    <div class="hero-img half-width">
+        <img src="images/hero_image.png" alt="hero image">
+    </div>
+</section>
+
+
+<section class="mission">
+
+    <div class="hero-img half-width">
+        <img src="images/dream_image1.png" alt="hero image">
+    </div>
+
+    <div class="hero-txt half-width">
+        <h1>Shuvra's Mission</h1>
+        <h3>Successful MERN Stack Developer</h3>
+        <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These website
+            is hand coded, beautiful, professional, fast to load and responsive in display on any size of
+            device(Desktop, laptop, tab, mobile).</p>
+        <a class="btn-link" href="#">DOWNLOAD RESUME</a>
+    </div>
+</section>
+
 <body>
-    <h1>Developer Portfolio</h1>
-    
+
 </body>
+
 </html>
