some section update

--- a/index.html
+++ b/index.html
@@ -11,41 +11,43 @@
     <link rel="stylesheet" href="style.css">
     <title>Developer Portfolio</title>
 </head>
-<section class="hero">
-
-    <div class="hero-txt half-width">
-        <h1>Welcome to</h1>
-        <h1> <span class="orange-color">Tuhin Shuvra </span> World!</h1>
-        <h1>Full Stack Web Developer</h1>
-        <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These website
-            is hand coded, beautiful, professional, fast to load and responsive in display on any size of
-            device(Desktop, laptop, tab, mobile).</p>
-        <a class="btn-link" href="#">HIRE ME</a>
-    </div>
-
-    <div class="hero-img half-width">
-        <img src="images/hero_image.png" alt="hero image">
-    </div>
-</section>
-
-
-<section class="mission">
-
-    <div class="hero-img half-width">
-        <img src="images/dream_image1.png" alt="hero image">
-    </div>
-
-    <div class="hero-txt half-width">
-        <h1>Shuvra's Mission</h1>
-        <h3>Successful MERN Stack Developer</h3>
-        <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These website
-            is hand coded, beautiful, professional, fast to load and responsive in display on any size of
-            device(Desktop, laptop, tab, mobile).</p>
-        <a class="btn-link" href="#">DOWNLOAD RESUME</a>
-    </div>
-</section>
 
 <body>
+    <section class="hero">
+
+        <div class="hero-txt half-width">
+            <h1>Welcome to</h1>
+            <h1> <span class="orange-color">Tuhin Shuvra </span> World!</h1>
+            <h1>Full Stack Web Developer</h1>
+            <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These
+                website
+                is hand coded, beautiful, professional, fast to load and responsive in display on any size of
+                device(Desktop, laptop, tab, mobile).</p>
+            <a class="btn-link" href="#">HIRE ME</a>
+        </div>
+
+        <div class="hero-img half-width">
+            <img src="images/hero_image.png" alt="hero image">
+        </div>
+    </section>
+
+
+    <section class="mission">
+
+        <div class="hero-img half-width">
+            <img src="images/dream_image1.png" alt="hero image">
+        </div>
+
+        <div class="hero-txt half-width">
+            <h1>Shuvra's Mission</h1>
+            <h3>Successful MERN Stack Developer</h3>
+            <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These
+                website
+                is hand coded, beautiful, professional, fast to load and responsive in display on any size of
+                device(Desktop, laptop, tab, mobile).</p>
+            <a class="btn-link" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 
 </body>
 
