all section completed"

--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
         </div>
     </section>
 
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="ex-child">
+            <div class="ex-common ex-child-one">
+                <h1>Full Stack Developer</h1>
+                <h3 class="orange-color">2020 to Present | Top Level Developer</h3>
+                <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These
+                    website is hand coded, beautiful, professional, fast to load and responsive in display on any size
+                    of device(Desktop, laptop, tab, mobile).</p>
+            </div>
+
+            <div class="ex-common ex-child-two">
+                <h1 class="">Full Stack Developer</h1>
+                <h3 class="orange-color">2020 to Present | Top Level Developer</h3>
+                <p>I can design and develop any kinds of website with HTML, CSS, Bootstrap, ReactJS and Wordpress. These
+                    website is hand coded, beautiful, professional, fast to load and responsive in display on any size
+                    of device(Desktop, laptop, tab, mobile).</p>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <p>Copy right © Tuhin Shuvra 2022, a Programming Hero initiative.</p>
+    </footer>
+
 </body>
 
 </html>
